media sizing and nav spacing fix

--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -22,6 +22,10 @@ nav {
   height: 10vh;
 }
 
+.mobile-nav {
+  margin-bottom: 10px;
+}
+
 .nav-ul {
   list-style-type: none;
   display: inline;
@@ -73,9 +77,17 @@ a {
   color: #EAEDE8;
 }
 
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 800px) {
   nav {
     font-size: 1.5em;
+    flex-direction: column;
+    height:;
+  }
+
+  .mobile-nav {
+    width: 100%;
+    height: 10vh;
+    display: flex;
   }
 
   .nav-ul {
