--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -101,12 +101,11 @@ button {
 }
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
   .login-btn {
     width: 40vw;
   }
   .signup-btn {
     width: 40vw;
   }
-
 }
