--- a/main_app/static/css/index-nav.css
+++ b/main_app/static/css/index-nav.css
@@ -1,6 +1,1 @@
 
-@media only screen and (max-width: 600px) {
-  .hidden-nav {
-    margin-top: 150px;
-  }
-}
