--- a/main_app/static/css/index.css
+++ b/main_app/static/css/index.css
@@ -233,13 +233,21 @@ h1, p {
   color: #272b2e;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
 
   .poem-div{
     width: 90%;
   }
   .poem {
     width: 90%;
+  }
+
+  .poem-add {
+    width: 90%;
+  }
+
+  #id_lines {
+    width: 80%;
   }
 
   .verse {
